# Team_trial_git

./: CMakeLists.txt  main.cpp  word.docx
